fix: fix wrong z-index of snackbar and prevent touchmove event of pull-refresh example

--- a/packages/varlet-ui/src/snackbar/snackbar.less
+++ b/packages/varlet-ui/src/snackbar/snackbar.less
@@ -38,7 +38,6 @@
     right: 0;
     bottom: 0;
     transition: all 0.15s @cubic-bezier;
-    z-index: 10;
 
     &__wrapper {
       width: @snackbar-width;
